objects/SBQQ__BlockPrice__c.object
<CustomObject>
    <customHelpPage>SBQQ__BlockPriceHelp</customHelpPage>
    <description>Price for a block quantity of the parent product.</description>
    <fields>
        <fullName>SBQQ__EffectiveDate__c</fullName>
        <description>The date when this block price is effective.  The value is taken when a block price snapshot is taken at order creation time.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date when this block price is effective.  The value is taken when a block price snapshot is taken at order creation time.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__LowerBound__c</fullName>
        <description>Lower bound of the quantity range for this block price.</description>
        <inlineHelpText>Lower bound of the quantity range for this block price.</inlineHelpText>
        <label>Lower Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The order product this Block Price applies to when the order product is created.</description>
        <inlineHelpText>The order product this Block Price applies to when the order product is created.</inlineHelpText>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Block Price Snapshots</relationshipLabel>
        <relationshipName>BlockPrice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalBlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The original product block price where this block price is snapshotted from.</description>
        <inlineHelpText>The original product block price where this block price is snapshotted from.</inlineHelpText>
        <label>Original Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Block Prices</relationshipLabel>
        <relationshipName>SnapshotBlockPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceBook2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Book to which block pricing applies.</description>
        <inlineHelpText>Select the Price Book that should receive block pricing when applicable.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Block Prices</relationshipLabel>
        <relationshipName>BlockPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Price__c</fullName>
        <description>Price for the parent product in specified quantity range.</description>
        <inlineHelpText>Price for the parent product in specified quantity range.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product to which block pricing applies.</description>
        <inlineHelpText>Select the product that should receive block pricing when applicable.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Block Prices</relationshipLabel>
        <relationshipName>BlockPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote line where this block price applies to when an order product is created.</description>
        <inlineHelpText>The quote line where this block price applies to when an order product is created.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Block Prices</relationshipLabel>
        <relationshipName>BlockPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpperBound__c</fullName>
        <description>Upper bound of the quantity range for this block price.</description>
        <inlineHelpText>Upper bound of the quantity range for this block price.</inlineHelpText>
        <label>Upper Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Block Price</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Block Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>